# macos-macro

./: CMakeLists.txt  README.md  app  app.c  build.sh  compile.sh  macmacro.h  macmacro.hpp  macro.c  main  main.cpp  run.sh
AutoApe/: Ape.h  AutoApe.c
AutoClicker/: AutoClicker.c  Example  Example.cpp
Example/: Example  Example.cpp
include/: macmacro.h
src/: ac.c  cf.c  km.c  macro.c
